plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

javafx {
    modules = [ 'javafx.controls' ]
}

application {
    mainClassName = 'HelloWorld'
}

task tetris(type: JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	main = "LukeTetrisPrototype.TetrisPrototype"
	jvmArgs = ["--module-path", classpath.asPath, "--add-modules", "javafx.controls" ] // Need this line to run JavaFX runtime components.
}

task runServerTest(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    main = "net.test.ServerTest"
    jvmArgs = ["--module-path", classpath.asPath, "--add-modules", "javafx.controls" ]
}

task runClientTest(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    main = "net.test.ClientTest"
    jvmArgs = ["--module-path", classpath.asPath, "--add-modules", "javafx.controls" ]
}